--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
        <div style="width:100%">
            <img id="8" src="assets/img/A2Z Dawa.png" style="width:80vw;height:35vh; margin-left:-10px; display:none"/>           
        </div>
-        <div id="LoText" style="display:none"> <label  style="color:#2b80a1;font-size:x-large;font-weight:bold;">A online pharmacy on pilot mode</label></div>
+        <div id="LoText" style="display:none"> <label  style="color:#2b80a1;font-size:x-large;font-weight:bold;">We provide <a style ="font-weight :bold">UTIMED</a> for your Medicinal Need </label></div>
      </div>
       </center>
     <p class="p-footer">
