--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" type="text/css" href="css/index.css" />
     <title>ULTIMED</title>   
     <script src="js/jquery.js"></script>
+    <script src="assets/js/index1.js"></script>
     <style>
         .first-main-page {
             background-color:white; /*#1390cf*/ /*1094d7*/
