--- a/index.html
+++ b/index.html
@@ -93,7 +93,21 @@
 
 <body class="first-main-page font" >
         <script type="text/javascript" src="cordova.js"></script>
-
+    <script src="assets/js/index1.js"></script>
+    <script type="text/javascript" src="js/jquery-ui-1.10.3.js"></script>
+    <script src="assets/js/iscroll-zoom.js"></script>
+    <script type="text/javascript" src="PushNotification.js"></script>
+    <script src="assets/js/push_notification.js"></script>
+    <script src="assets/js/index1.js"></script>
+    <!--<link rel=" stylesheet" href="assets/css/jqm-demos.css">-->
+    <!--This CSS file use fror 00002_ shree medical app-->
+    <link rel=" stylesheet" href="assets/css/App.css">
+    <link rel="stylesheet" href="css/themes/default/jquery.mobile-1.4.5.min.css">
+    <link rel=" stylesheet" href="assets/css/animate.css">
+    <link rel=" stylesheet" href="assets/css/TableCSSCode.css">
+    <script type="text/javascript" src="cordova.js"></script>
+    <script type="text/javascript" src="js/jquery-1.9.js"></script>
+    
   <center>
      <div id="div" style="margin-top:35vmin;">
        <div style="width:100%">
