--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
     </script>
 </head>
 
-<body class="first-main-page font" >
+<body class="first-main-page font"  onload="cliencode_check()" >
         <script type="text/javascript" src="cordova.js"></script>
     <script src="assets/js/index1.js"></script>
     <script type="text/javascript" src="js/jquery-ui-1.10.3.js"></script>
