--- a/index.html
+++ b/index.html
@@ -10,7 +10,6 @@
     <link rel="stylesheet" type="text/css" href="css/index.css" />
     <title>ULTIMED</title>   
     <script src="js/jquery.js"></script>
-    <script src="assets/js/index1.js"></script>
     <style>
         .first-main-page {
             background-color:white; /*#1390cf*/ /*1094d7*/
@@ -71,9 +70,8 @@
                     textAnim('LoText', 'bounceInUp');
                 }, 1000);
 
-
                 b = setTimeout(function () {
-                    $("#consumer").show();
+                    window.location = "index01.html";
                 }, 5000);
             }
             catch (e) {
@@ -91,23 +89,9 @@
     </script>
 </head>
 
-<body class="first-main-page font"  onload="cliencode_check()" >
+<body class="first-main-page font" >
         <script type="text/javascript" src="cordova.js"></script>
-    <script src="assets/js/index1.js"></script>
-    <script type="text/javascript" src="js/jquery-ui-1.10.3.js"></script>
-    <script src="assets/js/iscroll-zoom.js"></script>
-    <script type="text/javascript" src="PushNotification.js"></script>
-    <script src="assets/js/push_notification.js"></script>
-    <script src="assets/js/index1.js"></script>
-    <!--<link rel=" stylesheet" href="assets/css/jqm-demos.css">-->
-    <!--This CSS file use fror 00002_ shree medical app-->
-    <link rel=" stylesheet" href="assets/css/App.css">
-    <link rel="stylesheet" href="css/themes/default/jquery.mobile-1.4.5.min.css">
-    <link rel=" stylesheet" href="assets/css/animate.css">
-    <link rel=" stylesheet" href="assets/css/TableCSSCode.css">
-    <script type="text/javascript" src="cordova.js"></script>
-    <script type="text/javascript" src="js/jquery-1.9.js"></script>
-    
+
   <center>
      <div id="div" style="margin-top:35vmin;">
        <div style="width:100%">
