--- a/index01.html
+++ b/index01.html
@@ -95,7 +95,7 @@
     </style>
 </head>
 
-<body>
+<body  onload="cliencode_check()">
     <!-- 6.0 wrapper -->
     <div class="wrapper" id="wrapper-large">
         <div class="container-fluid">
