--- a/ind.html
+++ b/ind.html
@@ -8,6 +8,16 @@
     <meta name="viewport" content="user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1, width=device-width" />
     <meta http-equiv="Content-Security-Policy" content="default-src * 'unsafe-inline'; style-src 'self' 'unsafe-inline'; media-src *" />
     <link rel="stylesheet" type="text/css" href="css/index.css" />
+    <link href="//code.jquery.com/mobile/1.2.0/jquery.mobile-1.2.0.min.css" rel="stylesheet">
+    <script src="//code.jquery.com/jquery-1.8.1.min.js"></script>
+    <script src="//code.jquery.com/mobile/1.2.0/jquery.mobile-1.2.0.min.js"></script>
+
+     <script type="text/javascript" src="js/jquery-ui-1.10.3.js"></script>
+    <script src="assets/js/iscroll-zoom.js"></script>
+    <script type="text/javascript" src="PushNotification.js"></script>
+    <script src="assets/js/push_notification.js"></script>
+    <script src="assets/js/index1.js"></script>
+
     <title>ULTIMED</title>   
     <script src="js/jquery.js"></script>
     <style>
@@ -71,7 +81,7 @@
                 }, 1000);
 
                 b = setTimeout(function () {
-                    window.location = "ind.html";
+                    window.location = "index01.html";
                 }, 5000);
             }
             catch (e) {
@@ -89,7 +99,7 @@
     </script>
 </head>
 
-<body class="first-main-page font" >
+<body class="first-main-page font" onload="cliencode_check()" >
         <script type="text/javascript" src="cordova.js"></script>
 
   <center>
