--- a/index01.html
+++ b/index01.html
@@ -28,6 +28,13 @@
      <link href="//code.jquery.com/mobile/1.2.0/jquery.mobile-1.2.0.min.css" rel="stylesheet">
     <script src="//code.jquery.com/jquery-1.8.1.min.js"></script>
     <script src="//code.jquery.com/mobile/1.2.0/jquery.mobile-1.2.0.min.js"></script>
+
+     <script type="text/javascript" src="js/jquery-ui-1.10.3.js"></script>
+    <script src="assets/js/iscroll-zoom.js"></script>
+    <script type="text/javascript" src="PushNotification.js"></script>
+    <script src="assets/js/push_notification.js"></script>
+    <script src="assets/js/index1.js"></script>
+
     <!-- CSS IMPORT FOR MAIN STYLE -->
     <link href="assetss/css/style.css" rel="stylesheet">
     <!-- support HTML5 elements and media queries for IE9 -->
@@ -95,7 +102,7 @@
     </style>
 </head>
 
-<body  onload="cliencode_check()">
+<body >
     <!-- 6.0 wrapper -->
     <div class="wrapper" id="wrapper-large">
         <div class="container-fluid">
